# commonplace

./: .env.template  .envrc  .envrc.template  .gitignore  AGENTS.md  AGENTS.md.reader-fragment  AGENTS.md.template  CLAUDE.md  INSTALL.md  LICENSE-CODE  README.md  giscus.json  mkdocs.yml  properdocs.yml  properdocs_site_assets.py  pyproject.toml  qmd-collections.yml
.agents/plugins/: marketplace.json
.agents/skills/: connect  convert  cp-skill-compile-collections  cp-skill-convert  cp-skill-health-check  cp-skill-ingest  cp-skill-revise-autoreason  cp-skill-revise-iterative  cp-skill-validate  cp-skill-write  evaluate-scenarios  ingest  review-related-system  revise-iterative  roughdraft-review  snapshot-web  validate  write
.claude/: settings.json
.claude-plugin/: plugin.json
.claude/skills/: connect  convert  cp-skill-connect  cp-skill-snapshot-web  evaluate-scenarios  ingest  review-related-system  revise-iterative  snapshot-web  validate  write  write-agent-memory-system-review
.codex-plugin/: plugin.json
.codex/skills/: evaluate-scenarios  ingest  snapshot-web
.github/workflows/: pages.yml
kb/: README.md  WRITING.md  index.md  log.md
kb/agent-memory-systems/: COLLECTION.md  README.md  adaptation-survey-review-candidates.md  agentic-memory-systems-comparative-review.md  choosing-an-agent-memory-framework.md  dir-index.md  index.md  landscape.md  related-systems-index.md  review-framework-design.md  systems-table.md  systems.csv  thalo-type-comparison.md  trace-derived-learning-techniques-in-related-systems.md  trace-learning-techniques-in-related-systems.md
kb/agentic-systems/: COLLECTION.md  README.md  claude-code-dynamic-workflows.md  fractal.md  gbrain.md  semantic-engine.md  swamp.md
kb/articles/: COLLECTION.md  README.md  reflective-self-improvement.md  what-makes-a-system-self-improving.md
kb/instructions/: COLLECTION.md  FIX-SYSTEM.md  README.md  REVIEW-SYSTEM.md  WRITING.md  connect  convert  (+36 more)
reviews/: 001-generate-topic-links-from-frontmatter.prose-review.md  README.md  SUMMARY.md  SUMMARY.prose-review.md  SUMMARY.semantic-review.md  a-functioning-kb-needs-a-workshop-layer-not-just-a-library.prose-review.md  a-functioning-kb-needs-a-workshop-layer-not-just-a-library.semantic-review.md  a-good-agentic-kb-maximizes-contextual-competence-through-discoverable-composable-trustworthy-knowledge.prose-review.md  a-good-agentic-kb-maximizes-contextual-competence-through-discoverable-composable-trustworthy-knowledge.semantic-review.md  a-knowledge-base-should-support-fluid-resolution-switching.prose-review.md  a-knowledge-base-should-support-fluid-resolution-switching.semantic-review.md  active-campaign-understanding-needs-a-single-coherent-narrative-not-composed-notes.prose-review.md  ad-hoc-prompts-extend-the-system-without-schema-changes.prose-review.md  ad-hoc-prompts-extend-the-system-without-schema-changes.semantic-review.md  agent-context-is-constrained-by-soft-degradation-not-hard-token-limits.prose-review.md  agent-context-is-constrained-by-soft-degradation-not-hard-token-limits.semantic-review.md  agent-is-a-tool-loop.prose-review.md  agent-is-a-tool-loop.semantic-review.md  agent-orchestration-needs-coordination-guarantees-not-just-coordination-channels.prose-review.md  agent-orchestration-needs-coordination-guarantees-not-just-coordination-channels.semantic-review.md  agent-orchestration-occupies-a-multi-dimensional-design-space.prose-review.md  agent-orchestration-occupies-a-multi-dimensional-design-space.semantic-review.md  agent-runtimes-decompose-into-scheduler-context-engine-and-execution-substrate.prose-review.md  agent-runtimes-decompose-into-scheduler-context-engine-and-execution-substrate.semantic-review.md  agent-statelessness-makes-routing-architectural-not-learned.prose-review.md  agent-statelessness-makes-routing-architectural-not-learned.semantic-review.md  agent-statelessness-means-the-context-engine-should-inject-context-automatically.prose-review.md  agent-statelessness-means-the-context-engine-should-inject-context-automatically.semantic-review.md  agentic-systems-interpret-underspecified-instructions.prose-review.md  agentic-systems-interpret-underspecified-instructions.semantic-review.md  agents-md-should-be-organized-as-a-control-plane.prose-review.md  agents-md-should-be-organized-as-a-control-plane.semantic-review.md  agents-navigate-by-deciding-what-to-read-next.prose-review.md  agents-navigate-by-deciding-what-to-read-next.semantic-review.md  alexander-patterns-and-knowledge-system-design.prose-review.md  alexander-patterns-and-knowledge-system-design.semantic-review.md  always-loaded-context-has-two-surfaces-with-different-affordances.prose-review.md  always-loaded-context-has-two-surfaces-with-different-affordances.semantic-review.md  always-loaded-context-mechanisms-in-agent-harnesses.semantic-review.md  apparent-success-is-an-unreliable-health-signal-in-framework-owned-tool-loops.prose-review.md  (+290 more)
scripts/: README.md  REVIEW-SYSTEM.md  ack_gate_review.py  ack_review.py  analyze_matrix.py  build_systems_matrix.py  cloud-session-setup.sh  create_review_run.py  finalize_review_run.py  frontmatter.py  gate_core.py  gate_reviews.py  gate_selector.py  gate_sweep_format.py  generate_notes_index.py  list_notes.py  migrate-review-db-v4-to-v5.py  migrate-review-db-v5-to-v7.py  migrate-review-db-v7-to-commonplace-store.py  migrate_review_metadata.py  migrate_review_result_footer.py  mkdocs_hooks.py  move-reviews-to-subdir.py  notes_selector.py  promotion_candidates.py  prune_superseded_unknown_manual_import_reviews.py  qmd-collections.yml  record_bundle_review.py  relocate_note.py  render_systems_table.py  repair_codex_model_partitions.py  repair_manual_import_review_results.py  reparse_gate_review_decisions.py  resolve_gates.py  review-problems-for-note.py  review-schema.sql  review_db.py  review_metadata.py  review_model.py  review_prereqs.py  (+18 more)
types/: note.md  note.schema.yaml  note.template.md  note.yaml  text.md  text.yaml
work/: waterfalls-core-failure-was-treating-natural-language-as-a-formal-specification-medium.md
(+5669 files in other folders)
