[project]
name = "llm-commonplace"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["jsonschema>=4.25.0", "PyYAML>=6.0.0"]

[project.scripts]
commonplace-ack-gate-review = "commonplace.cli.review.ack_gate_review:main"
commonplace-ack-trivial-note-changes = "commonplace.cli.review.ack_trivial_note_changes:main"
commonplace-create-review-run = "commonplace.cli.review.create_review_run:main"
commonplace-finalize-review-run = "commonplace.cli.review.finalize_review_run:main"
commonplace-github-snapshot = "commonplace.cli.github_snapshot:main"
commonplace-init = "commonplace.cli.init_project:main"
commonplace-ingest-bundle-output = "commonplace.cli.review.ingest_bundle_output:main"
commonplace-ingest-batch-output = "commonplace.cli.review.ingest_batch_output:main"
commonplace-prepare-review-batch = "commonplace.cli.review.prepare_review_batch:main"
commonplace-promotion-candidates = "commonplace.cli.promotion_candidates:main"
commonplace-prune-superseded-unknown-manual-import-reviews = "commonplace.cli.review.prune_superseded_unknown_manual_import_reviews:main"
commonplace-relocate-directory = "commonplace.cli.relocate_directory:main"
commonplace-relocate-note = "commonplace.cli.relocate_note:main"
commonplace-repair-manual-import-review-results = "commonplace.cli.review.repair_manual_import_review_results:main"
commonplace-reparse-gate-review-decisions = "commonplace.cli.review.reparse_gate_review_decisions:main"
commonplace-resolve-gates = "commonplace.cli.review.resolve_gates:main"
commonplace-review-sweep = "commonplace.cli.review.review_sweep:main"
commonplace-review-target-selector = "commonplace.cli.review.review_target_selector:main"
commonplace-run-gate-sweep = "commonplace.cli.review.run_gate_sweep:main"
commonplace-run-review-bundle = "commonplace.cli.review.run_review_bundle:main"
commonplace-validate = "commonplace.cli.validate_notes:main"
commonplace-warn-selector = "commonplace.cli.review.warn_selector:main"
commonplace-write-gate-review = "commonplace.cli.review.write_gate_review:main"
commonplace-x-snapshot = "commonplace.cli.x_snapshot:main"

[dependency-groups]
dev = ["pytest", "ruff"]

[project.optional-dependencies]
docs = ["mkdocs", "mkdocs-redirects"]
snapshot = ["xdk"]
all = ["mkdocs", "mkdocs-redirects", "python-dotenv", "pyyaml", "xdk"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/commonplace"]

[tool.hatch.build.targets.sdist]
include = [
    "/AGENTS.md.template",
    "/.envrc.template",
    "/kb/instructions",
    "/kb/notes",
    "/kb/reference",
    "/kb/reports/types",
    "/kb/sources/types",
    "/kb/types",
    "/src",
    "/test",
]

[tool.hatch.build.targets.sdist.force-include]
"kb/instructions/cp-skill-connect" = "kb/instructions/cp-skill-connect"
"kb/instructions/cp-skill-convert" = "kb/instructions/cp-skill-convert"
"kb/instructions/cp-skill-health-check" = "kb/instructions/cp-skill-health-check"
"kb/instructions/cp-skill-ingest" = "kb/instructions/cp-skill-ingest"
"kb/instructions/cp-skill-revise-autoreason" = "kb/instructions/cp-skill-revise-autoreason"
"kb/instructions/cp-skill-revise-iterative" = "kb/instructions/cp-skill-revise-iterative"
"kb/instructions/cp-skill-snapshot-web" = "kb/instructions/cp-skill-snapshot-web"
"kb/instructions/cp-skill-validate" = "kb/instructions/cp-skill-validate"
"kb/instructions/cp-skill-write" = "kb/instructions/cp-skill-write"

[tool.hatch.build.targets.wheel.force-include]
"AGENTS.md.template" = "commonplace/_data/AGENTS.md.template"
".envrc.template" = "commonplace/_data/.envrc.template"
"kb/instructions" = "commonplace/_data/kb/instructions"
"kb/notes" = "commonplace/_data/kb/notes"
"kb/reference" = "commonplace/_data/kb/reference"
"kb/reports/types" = "commonplace/_data/kb/reports/types"
"kb/sources/types" = "commonplace/_data/kb/sources/types"
"kb/types" = "commonplace/_data/kb/types"

[tool.pytest.ini_options]
testpaths = ["test/commonplace"]
