[project]
name = "llm-commonplace"
version = "0.1.3"
description = "The theory of LLM wikis, running as one. A framework for agent-operated knowledge: typed, linked, review-gated markdown your agents execute."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT AND CC-BY-4.0"
license-files = ["LICENSE*"]
authors = [
    { name = "Zbigniew Lukasiak", email = "zzbbyy@gmail.com" },
]
keywords = ["agents", "context-engineering", "knowledge-base", "llm", "llm-wiki", "markdown"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = ["jsonschema>=4.25.0", "PyYAML>=6.0.0", "referencing>=0.31.0"]

[project.urls]
Documentation = "https://zby.github.io/commonplace/"
Homepage = "https://zby.github.io/commonplace/"
Repository = "https://github.com/zby/commonplace"

[project.scripts]
commonplace-ack-review = "commonplace.cli.review.ack_review:main"
commonplace-ack-trivial-note-changes = "commonplace.cli.review.ack_trivial_note_changes:main"
commonplace-create-review-jobs = "commonplace.cli.review.create_review_jobs:main"
commonplace-finalize-review-job = "commonplace.cli.review.finalize_review_job:main"
commonplace-freshness-accept = "commonplace.cli.freshness_accept:main"
commonplace-freshness-ack = "commonplace.cli.freshness_ack:main"
commonplace-freshness-retire = "commonplace.cli.freshness_retire:main"
commonplace-freshness-status = "commonplace.cli.freshness_status:main"
commonplace-store-healthcheck = "commonplace.cli.store_healthcheck:main"
commonplace-guard-full-pass-report = "commonplace.cli.guard_full_pass_report:main"
commonplace-github-snapshot = "commonplace.cli.github_snapshot:main"
commonplace-init = "commonplace.cli.init_project:main"
commonplace-promotion-candidates = "commonplace.cli.promotion_candidates:main"
commonplace-relocate-directory = "commonplace.cli.relocate_directory:main"
commonplace-relocate-note = "commonplace.cli.relocate_note:main"
commonplace-review-job-list = "commonplace.cli.review.review_job_list:main"
commonplace-resolve-criteria = "commonplace.cli.review.resolve_criteria:main"
commonplace-review-target-selector = "commonplace.cli.review.review_target_selector:main"
commonplace-validate = "commonplace.cli.validate_notes:main"
commonplace-verify-quotes = "commonplace.cli.verify_quotes:main"
commonplace-warn-selector = "commonplace.cli.review.warn_selector:main"
commonplace-x-snapshot = "commonplace.cli.x_snapshot:main"

[dependency-groups]
dev = ["pytest", "ruff"]

[tool.ruff]
include = ["src/**/*.py", "tests/**/*.py"]

[project.optional-dependencies]
docs = ["properdocs", "properdocs-theme-mkdocs", "mkdocs-redirects"]
snapshot = ["python-dotenv", "xdk"]
all = ["properdocs", "properdocs-theme-mkdocs", "mkdocs-redirects", "python-dotenv", "pyyaml", "xdk"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/commonplace"]

[tool.hatch.build.targets.sdist]
include = [
    "/AGENTS.md.template",
    "/.envrc.template",
    "/kb/instructions",
    "/kb/notes",
    "/kb/reference",
    "/kb/reports/types",
    "/kb/sources/types",
    "/kb/types",
    "/src",
    "/tests",
]

[tool.hatch.build.targets.sdist.force-include]
"kb/instructions/cp-skill-connect" = "kb/instructions/cp-skill-connect"
"kb/instructions/cp-skill-convert" = "kb/instructions/cp-skill-convert"
"kb/instructions/cp-skill-health-check" = "kb/instructions/cp-skill-health-check"
"kb/instructions/cp-skill-ingest" = "kb/instructions/cp-skill-ingest"
"kb/instructions/cp-skill-revise-autoreason" = "kb/instructions/cp-skill-revise-autoreason"
"kb/instructions/cp-skill-revise-iterative" = "kb/instructions/cp-skill-revise-iterative"
"kb/instructions/cp-skill-snapshot-web" = "kb/instructions/cp-skill-snapshot-web"
"kb/instructions/cp-skill-validate" = "kb/instructions/cp-skill-validate"
"kb/instructions/cp-skill-write" = "kb/instructions/cp-skill-write"

[tool.hatch.build.targets.wheel.force-include]
"AGENTS.md.template" = "commonplace/_data/AGENTS.md.template"
".envrc.template" = "commonplace/_data/.envrc.template"
"kb/instructions" = "commonplace/_data/kb/instructions"
"kb/notes" = "commonplace/_data/kb/notes"
"kb/reference" = "commonplace/_data/kb/reference"
"kb/reports/types" = "commonplace/_data/kb/reports/types"
"kb/sources/types" = "commonplace/_data/kb/sources/types"
"kb/types" = "commonplace/_data/kb/types"

[tool.pytest.ini_options]
testpaths = ["tests/commonplace"]
# Make `from tests...` helper imports work under the plain `pytest` script,
# which (unlike `python -m pytest`) does not put the invocation directory on
# sys.path. Rooted at rootdir, so it holds from any cwd.
pythonpath = ["."]
